------------------------------------------------------------------------
r132 | draeger1 | 2013-07-23 10:30:13 -0700 (Tue, 23 Jul 2013) | 4 lines


Added wf_extrapolation variable to let user choose extrapolation method during MD (allowed values:  ASP, NTC, SIMPLE, OFF).


------------------------------------------------------------------------
r131 | draeger1 | 2013-07-17 11:42:30 -0700 (Wed, 17 Jul 2013) | 4 lines


Fixed bug where ultrasoft runs with a single atom of a given species can crash when nrowmax != npes.


------------------------------------------------------------------------
r130 | draeger1 | 2013-07-17 11:29:25 -0700 (Wed, 17 Jul 2013) | 4 lines


Don't initialize hamil_wf unless ctrl.tddft_involved is true, causes crash with ultrasoft.


------------------------------------------------------------------------
r129 | draeger1 | 2013-07-16 12:29:05 -0700 (Tue, 16 Jul 2013) | 4 lines


Fixed bug in SpeciesReader where potentials whose local channel did not have a radial_function defined and where lloc < lmax were trying to skip ahead to the next radial_function and then crashing the loop.  


------------------------------------------------------------------------
r128 | draeger1 | 2013-07-16 10:50:52 -0700 (Tue, 16 Jul 2013) | 4 lines


Rolled back col_ctxt change from r125 after user reported hang / anomalous results.  


------------------------------------------------------------------------
r127 | draeger1 | 2013-07-15 14:07:01 -0700 (Mon, 15 Jul 2013) | 4 lines


Added set_velocity command.


------------------------------------------------------------------------
r126 | draeger1 | 2013-07-15 12:28:33 -0700 (Mon, 15 Jul 2013) | 4 lines


Fixed randomize_vel command to actually rescale the velocities to the target temperature.


------------------------------------------------------------------------
r125 | draeger1 | 2013-07-15 09:20:09 -0700 (Mon, 15 Jul 2013) | 4 lines

